# serializer version: 1
# name: test_comment_ok[comment_c_expr][sql]
  '''
  SELECT
      1, /* one */
      2
  '''
# ---
# name: test_comment_ok[comment_c_expr][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_c_leading][sql]
  '''
  /* TODO: SELECT 2 */
  SELECT 1
  '''
# ---
# name: test_comment_ok[comment_c_leading][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_c_trailing][sql]
  '''
  SELECT 1
  /* one */
  '''
# ---
# name: test_comment_ok[comment_c_trailing][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_expr][sql]
  '''
  SELECT
      1, # one
      2
  '''
# ---
# name: test_comment_ok[comment_sh_expr][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sh_leading][sql]
  '''
  # TODO: SELECT 2
  SELECT 1
  '''
# ---
# name: test_comment_ok[comment_sh_leading][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sh_trailing][sql]
  '''
  SELECT 1
  # one
  '''
# ---
# name: test_comment_ok[comment_sh_trailing][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_expr][sql]
  '''
  SELECT
      1, -- one
      2
  '''
# ---
# name: test_comment_ok[comment_sql_expr][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
        select_expr
          integer_literal	2
  
  '''
# ---
# name: test_comment_ok[comment_sql_leading][sql]
  '''
  -- myfile.sql
  SELECT 1
  '''
# ---
# name: test_comment_ok[comment_sql_leading][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
# name: test_comment_ok[comment_sql_trailing][sql]
  '''
  SELECT 1
  -- one
  '''
# ---
# name: test_comment_ok[comment_sql_trailing][tree]
  '''
  query_expr
    select
      select_list
        select_expr
          integer_literal	1
  
  '''
# ---
